force-app/main/default/objects/Account/fields/District_Service_Fleet_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Service_Fleet_Service_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service related field only</description>
    <label>District Service / Fleet Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DSM_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>