force-app/main/default/objects/Account/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <formula>IF(
ISPICKVAL(PACCARDivision__c, &quot;P&quot;),
&quot;Peterbilt&quot;,
IF(
ISPICKVAL(PACCARDivision__c, &quot;K&quot;),
&quot;Kenworth&quot;,
IF(
ISPICKVAL(PACCARDivision__c, &quot;KW&quot;),
&quot;Kenworth&quot;,
IF(
ISPICKVAL(PACCARDivision__c, &quot;PB&quot;),
&quot;Peterbilt&quot;,
IF(
ISPICKVAL(PACCARDivision__c, &quot;ISP&quot;),
&quot;Independent Service Provider&quot;,
TEXT(PACCARDivision__c))))))</formula>
    <label>Division Name</label>
    <type>Text</type>
</CustomField>