force-app/main/default/objects/Account/fields/Division_Name_OLD__c.field-meta.xml
<CustomField>
    <fullName>Division_Name_OLD__c</fullName>
    <description>Name of Division</description>
    <inlineHelpText>Use Kenworth or Peterbilt</inlineHelpText>
    <label>Division Name OLD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kenworth</fullName>
            </value>
            <value>
                <fullName>Peterbilt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>