force-app/main/default/objects/Account/fields/Dollys__c.field-meta.xml
<CustomField>
    <fullName>Dollys__c</fullName>
    <label>Dollys</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>