force-app/main/default/objects/Account/fields/Donaldson_target__c.field-meta.xml
<CustomField>
    <fullName>Donaldson_target__c</fullName>
    <label>Donaldson_target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>