force-app/main/default/objects/Account/fields/DPM__c.field-meta.xml
<CustomField>
    <fullName>DPM__c</fullName>
    <label>DPM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARANGO, J.</fullName>
            </value>
            <value>
                <fullName>BERNAL,D.</fullName>
            </value>
            <value>
                <fullName>BETHEA, B.</fullName>
            </value>
            <value>
                <fullName>CALACICH.L.</fullName>
            </value>
            <value>
                <fullName>CAPPELLO, N.</fullName>
            </value>
            <value>
                <fullName>CHASE, K.</fullName>
            </value>
            <value>
                <fullName>CHOWANIEC, M.</fullName>
            </value>
            <value>
                <fullName>CLARIGUE, J.</fullName>
            </value>
            <value>
                <fullName>CLARK, S.</fullName>
            </value>
            <value>
                <fullName>CORREDOR, D.</fullName>
            </value>
            <value>
                <fullName>CRESSY, S.</fullName>
            </value>
            <value>
                <fullName>DANIEL, J.</fullName>
            </value>
            <value>
                <fullName>DANIEL, P.</fullName>
            </value>
            <value>
                <fullName>DANIELS, M.</fullName>
            </value>
            <value>
                <fullName>DOLEZAL, R.</fullName>
            </value>
            <value>
                <fullName>DREMOV, M.</fullName>
            </value>
            <value>
                <fullName>ELLISON, J.</fullName>
            </value>
            <value>
                <fullName>FILIATRAULT R.</fullName>
            </value>
            <value>
                <fullName>FLORES, JM.</fullName>
            </value>
            <value>
                <fullName>GILLIS, J.</fullName>
            </value>
            <value>
                <fullName>GONZALEZ, A.</fullName>
            </value>
            <value>
                <fullName>GONZALEZ, L.</fullName>
            </value>
            <value>
                <fullName>GUTIERREZ, R.</fullName>
            </value>
            <value>
                <fullName>GUZMAN, J.</fullName>
            </value>
            <value>
                <fullName>HUTCHINSON, T.</fullName>
            </value>
            <value>
                <fullName>INTL DEPT</fullName>
            </value>
            <value>
                <fullName>JAMROSZ, M.</fullName>
            </value>
            <value>
                <fullName>KRAMER, M.</fullName>
            </value>
            <value>
                <fullName>KRUEGER, J.</fullName>
            </value>
            <value>
                <fullName>LEFFLER, T.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>