force-app/main/default/objects/Account/fields/DPM_Mexico__c.field-meta.xml
<CustomField>
    <fullName>DPM_Mexico__c</fullName>
    <description>Field created to be able to group by DPM the sales from Mexican Dealers that are buying in the USA.
The  Dealers locations are assign to INT DEPT but we need to assigned to Mexican DPM. Is not possible to do it on AS400 directly because the District 112 is not only for dealers with this specification</description>
    <label>DPM (Mexico)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>