force-app/main/default/objects/Account/fields/DSM_Contact__c.field-meta.xml
<CustomField>
    <fullName>DSM_Contact__c</fullName>
    <description>used for data migration only</description>
    <label>DSM Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>