force-app/main/default/objects/Account/fields/DSM_FSM_Email__c.field-meta.xml
<CustomField>
    <fullName>DSM_FSM_Email__c</fullName>
    <description>Only populate when DSM should be contacted when Cases are created for the Account</description>
    <inlineHelpText>Only populate when DSM should be contacted when Cases are created for the Account</inlineHelpText>
    <label>DSM / FSM Email</label>
    <type>Email</type>
</CustomField>