force-app/main/default/objects/Account/fields/Dual__c.field-meta.xml
<CustomField>
    <fullName>Dual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To flag all the dealers that are Dual</description>
    <label>Dual Dealership</label>
    <type>Checkbox</type>
</CustomField>