force-app/main/default/objects/Account/fields/Dual_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Dual_Affiliation__c</fullName>
    <description>Describe the affiliation that the dealer code have as a Dual Dealership</description>
    <label>Dual Affiliation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AutoCar</fullName>
            </value>
            <value>
                <fullName>Bluebird</fullName>
            </value>
            <value>
                <fullName>Clement Trailer</fullName>
            </value>
            <value>
                <fullName>East Trailer</fullName>
            </value>
            <value>
                <fullName>Ford</fullName>
            </value>
            <value>
                <fullName>GMC</fullName>
            </value>
            <value>
                <fullName>Hino</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Isuzu</fullName>
            </value>
            <value>
                <fullName>John Deere</fullName>
            </value>
            <value>
                <fullName>Mack</fullName>
            </value>
            <value>
                <fullName>Mitsu</fullName>
            </value>
            <value>
                <fullName>Sterling</fullName>
            </value>
            <value>
                <fullName>Trailmobile</fullName>
            </value>
            <value>
                <fullName>UD</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>