force-app/main/default/objects/Account/fields/eCommerce_Goal__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Goal__c</fullName>
    <formula>$CustomMetadata.Goals__mdt.Goals.eCommerce__c</formula>
    <label>eCommerce Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>