force-app/main/default/objects/Account/fields/eCommerce_Project_Mgr__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Project_Mgr__c</fullName>
    <description>Technical support from the eCommerce team</description>
    <label>eCommerce Project Mgr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Axel Arvizu</fullName>
            </value>
            <value>
                <fullName>Lisa Maloy</fullName>
            </value>
            <value>
                <fullName>Quin Hartman</fullName>
            </value>
            <value>
                <fullName>Elizabeth Romo</fullName>
                <isActive>false</isActive>
                <label>Elizabeth Romo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>