force-app/main/default/objects/Account/fields/EISXP__c.field-meta.xml
<CustomField>
    <fullName>EISXP__c</fullName>
    <formula>ISX__c *800+ PX__c *450</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Annual MX ISX Engine Purchases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>