force-app/main/default/objects/Account/fields/Elegible_para_el_Programa__c.field-meta.xml
<CustomField>
    <fullName>Elegible_para_el_Programa__c</fullName>
    <label>Elegible para el Programa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>