force-app/main/default/objects/Account/fields/Email_Notify_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Email_Notify_of_Services__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Denotes if the account needs to be notified by email before permissions to perform service should be granted</description>
    <label>Email Notify of Services</label>
    <type>Checkbox</type>
</CustomField>