force-app/main/default/objects/Account/fields/End_Date_1__c.field-meta.xml
<CustomField>
    <fullName>End_Date_1__c</fullName>
    <defaultValue>DATE(2015, 12, 31)</defaultValue>
    <label>End Date1</label>
    <type>Date</type>
</CustomField>