force-app/main/default/objects/Account/fields/Engine_Brand_Preference__c.field-meta.xml
<CustomField>
    <fullName>Engine_Brand_Preference__c</fullName>
    <label>Engine Brand Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cummins</fullName>
            </value>
            <value>
                <fullName>Detroit Diesel</fullName>
            </value>
            <value>
                <fullName>MACK</fullName>
            </value>
            <value>
                <fullName>Navistar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PACCAR</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>