force-app/main/default/objects/Account/fields/Estimated_Annual_Parts_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Parts_Purchases__c</fullName>
    <formula>( Class_8_Total__c  * 3909)  + ( Class_6_7_Total__c  * 2106)  + ( Trailers__c  * 434)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation is as follows: ( Class_8_Total__c  * 3909)  + ( Class_6_7_Total__c  * 2106)  + ( Trailers__c  * 434)</inlineHelpText>
    <label>Estimated Annual Parts Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>