force-app/main/default/objects/Account/fields/Estimated_Annual_Service_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Service_Purchases__c</fullName>
    <formula>( Class_8_Total__c  * 106.3 * 82.31) + ( Class_6_7_Total__c  * 68.25 * 82.31) + ( Trailers__c  * 20.74 * 82.31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation is as follows: ( Class_8_Total__c  * 106.3 * 82.31) + ( Class_6_7_Total__c  * 68.25 * 82.31) + ( Trailers__c  * 20.74 * 82.31)</inlineHelpText>
    <label>Estimated Annual Service Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>