force-app/main/default/objects/Account/fields/Estimated_Qtr_Parts_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Qtr_Parts_Purchases__c</fullName>
    <description>Potencial de Ventas trimestral que tiene la flota debido a la cantidad de unidades que tiene.
(Potencial Anual /4)</description>
    <formula>Estimated_MX_Annual_Parts_Purchases__c /4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Potencial de Ventas trimestral que tiene la flota debido a la cantidad de unidades que tiene.
(Potencial Anual /4)</inlineHelpText>
    <label>MX Qtr Estimated Parts Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>