force-app/main/default/objects/Account/fields/Expiration_Agreement_Section__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Agreement_Section__c</fullName>
    <label>Expiration Agreement Section</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>