force-app/main/default/objects/Account/fields/Expiration_Type__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Type__c</fullName>
    <label>Expiration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renew</fullName>
            </value>
            <value>
                <fullName>Auto Expire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>