force-app/main/default/objects/Account/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts Only</fullName>
            </value>
            <value>
                <fullName>Parts and Service</fullName>
            </value>
            <value>
                <fullName>Service Only</fullName>
            </value>
            <value>
                <fullName>Parts and Mobile</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Parts Only + Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>