force-app/main/default/objects/Account/fields/Filtros_PACCAR_target__c.field-meta.xml
<CustomField>
    <fullName>Filtros_PACCAR_target__c</fullName>
    <label>Filtros PACCAR_target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>