force-app/main/default/objects/Account/fields/Financial_Entity__c.field-meta.xml
<CustomField>
    <fullName>Financial_Entity__c</fullName>
    <label>Financial Entity</label>
    <length>12</length>
    <type>Text</type>
</CustomField>