force-app/main/default/objects/Account/fields/Firestone_Target__c.field-meta.xml
<CustomField>
    <fullName>Firestone_Target__c</fullName>
    <label>Firestone Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>