force-app/main/default/objects/Account/fields/First_Retail_Sale__c.field-meta.xml
<CustomField>
    <fullName>First_Retail_Sale__c</fullName>
    <label>First Retail Sale</label>
    <type>Date</type>
</CustomField>