force-app/main/default/objects/Account/fields/Fleet_Account_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Account_Code_1__c</fullName>
    <label>Fleet Account Code 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>