force-app/main/default/objects/Account/fields/Fleet_Account_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Account_Code_2__c</fullName>
    <label>Fleet Account Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>