force-app/main/default/objects/Account/fields/Fleet_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Account_Code__c</fullName>
    <label>Fleet Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>