force-app/main/default/objects/Account/fields/Fleet_Business_System__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Business_System__c</fullName>
    <label>Fleet Business System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ariba</fullName>
            </value>
            <value>
                <fullName>Cetaris</fullName>
            </value>
            <value>
                <fullName>Coupa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Procatis</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Sitic</fullName>
            </value>
            <value>
                <fullName>TMW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>