force-app/main/default/objects/Account/fields/Fleet_Code__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Code__c</fullName>
    <description>National Account Fleet Code</description>
    <externalId>true</externalId>
    <inlineHelpText>National Account Fleet Code</inlineHelpText>
    <label>Fleet Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>