force-app/main/default/objects/Account/fields/Fleet_Daily_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Daily_Contacts__c</fullName>
    <label>Fleet Daily Contacts</label>
    <length>200</length>
    <type>Text</type>
</CustomField>