force-app/main/default/objects/Account/fields/Fleet_Goal__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Goal__c</fullName>
    <description>Fleet Goal assigned by the Fleet Department. Only Legacy Accounts</description>
    <label>Fleet Goal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>