force-app/main/default/objects/Account/fields/Fleet_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Group_Code__c</fullName>
    <formula>Parent.Fleet_Code__c</formula>
    <inlineHelpText>Fleet Code of Parent Account</inlineHelpText>
    <label>Fleet Group Code</label>
    <type>Text</type>
</CustomField>