force-app/main/default/objects/Account/fields/Fleet_Integration_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Integration_Comments__c</fullName>
    <label>Fleet Integration Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>