force-app/main/default/objects/Account/fields/Fleet_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Integration_Status__c</fullName>
    <label>Fleet Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discussion/Demo</fullName>
            </value>
            <value>
                <fullName>Pending PO</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Test/Pilot</fullName>
            </value>
            <value>
                <fullName>Rollout/Live</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed/Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>