force-app/main/default/objects/Account/fields/Fleet_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Integration_Type__c</fullName>
    <label>Fleet Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centralized</fullName>
            </value>
            <value>
                <fullName>Punch-Out</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>