force-app/main/default/objects/Account/fields/Fleet_Lead_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Lead_Manager__c</fullName>
    <description>Fleet Sales Manager that lead the National Account</description>
    <label>Fleet Lead Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Welsh</fullName>
            </value>
            <value>
                <fullName>Ball</fullName>
            </value>
            <value>
                <fullName>Gerstner</fullName>
            </value>
            <value>
                <fullName>Booth</fullName>
            </value>
            <value>
                <fullName>Reynolds</fullName>
            </value>
            <value>
                <fullName>Telling</fullName>
            </value>
            <value>
                <fullName>Ernest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>