force-app/main/default/objects/Account/fields/Fleet_OPC_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Fleet_OPC_Live_Date__c</fullName>
    <label>Fleet OPC &quot;Live&quot; Date</label>
    <type>Date</type>
</CustomField>