force-app/main/default/objects/Account/fields/Fleet_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Project_Manager__c</fullName>
    <label>Fleet Project Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Craig Raglin</fullName>
            </value>
            <value>
                <fullName>Hannah Herman</fullName>
            </value>
            <value>
                <fullName>Samantha Joens</fullName>
            </value>
            <value>
                <fullName>Maya Yamaguchi</fullName>
                <isActive>false</isActive>
                <label>Maya Yamaguchi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>