force-app/main/default/objects/Account/fields/Fleet_Sales_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Sales_Coordinator__c</fullName>
    <label>Fleet Sales Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bronson Berry</fullName>
                <isActive>false</isActive>
                <label>Bronson Berry</label>
            </value>
            <value>
                <fullName>Ian Bradley</fullName>
            </value>
            <value>
                <fullName>Luis Diaz de Leon</fullName>
            </value>
            <value>
                <fullName>Mia Won</fullName>
            </value>
            <value>
                <fullName>Sam Moore</fullName>
            </value>
            <value>
                <fullName>Sandra Demarr</fullName>
            </value>
            <value>
                <fullName>Shelley Anderson</fullName>
            </value>
            <value>
                <fullName>Tina Williams</fullName>
            </value>
            <value>
                <fullName>Tracey Andrews</fullName>
                <isActive>false</isActive>
                <label>Tracey Andrews</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>