force-app/main/default/objects/Account/fields/Fleet_Sales_Goal__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Sales_Goal__c</fullName>
    <formula>$CustomMetadata.Goals__mdt.Goals.Fleet__c</formula>
    <label>Fleet Sales Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>