force-app/main/default/objects/Account/fields/Fleet_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Sales_Manager__c</fullName>
    <label>Fleet Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Frank Reynolds</fullName>
            </value>
            <value>
                <fullName>James Telling</fullName>
            </value>
            <value>
                <fullName>Justin Gerstner</fullName>
            </value>
            <value>
                <fullName>Mike Sharpe</fullName>
            </value>
            <value>
                <fullName>Monica Cafferty</fullName>
            </value>
            <value>
                <fullName>Scott Tuck</fullName>
            </value>
            <value>
                <fullName>Steve McManis</fullName>
            </value>
            <value>
                <fullName>Thomas Booth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>