force-app/main/default/objects/Account/fields/Fleet_SC_Description__c.field-meta.xml
<CustomField>
    <fullName>Fleet_SC_Description__c</fullName>
    <label>Fleet SC Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>