force-app/main/default/objects/Account/fields/Fleet_Senior_Level_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Senior_Level_Contacts__c</fullName>
    <label>Fleet Senior Level Contacts</label>
    <length>200</length>
    <type>Text</type>
</CustomField>