force-app/main/default/objects/Account/fields/Fleet_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Service_Manager__c</fullName>
    <description>FSM of the Account</description>
    <label>Fleet Service Manager</label>
    <length>200</length>
    <type>Text</type>
</CustomField>