force-app/main/default/objects/Account/fields/Fleet_Stock_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Stock_Class_Id__c</fullName>
    <label>Fleet Stock Class Id.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>