force-app/main/default/objects/Account/fields/Fleetguard_target__c.field-meta.xml
<CustomField>
    <fullName>Fleetguard_target__c</fullName>
    <label>Fleetguard_target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>