force-app/main/default/objects/Account/fields/Flotas_Registradas__c.field-meta.xml
<CustomField>
    <fullName>Flotas_Registradas__c</fullName>
    <label>Flotas Registradas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>