force-app/main/default/objects/Account/fields/FNA_Status__c.field-meta.xml
<CustomField>
    <fullName>FNA_Status__c</fullName>
    <inlineHelpText>&quot;Not Located&quot; - The account has not yet been GeoTagged.  &quot;Located&quot; means it&apos;s ready to be mapped.  &quot;Problem with Address&quot; means that Google Maps could not find the location. &quot;Try again Later&quot; - Google could not process the request at that time.</inlineHelpText>
    <label>Find Nearby Accounts Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
                <label>Not Located Yet</label>
            </value>
            <value>
                <fullName>Located</fullName>
            </value>
            <value>
                <fullName>Problem with Address</fullName>
            </value>
            <value>
                <fullName>Bad Google Key</fullName>
            </value>
            <value>
                <fullName>Google Exhausted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>