force-app/main/default/objects/Account/fields/FOCUS__c.field-meta.xml
<CustomField>
    <fullName>FOCUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FOCUS</label>
    <type>Checkbox</type>
</CustomField>