force-app/main/default/objects/Account/fields/FOCUS_Abandoned_Date__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Abandoned_Date__c</fullName>
    <label>FOCUS Abandoned Date</label>
    <type>Date</type>
</CustomField>