force-app/main/default/objects/Account/fields/FOCUS_Account_Mgr__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Account_Mgr__c</fullName>
    <label>FOCUS Account Mgr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jorge Mendoza</fullName>
            </value>
            <value>
                <fullName>Marieve Legault</fullName>
            </value>
            <value>
                <fullName>Axel Arvizu</fullName>
            </value>
            <value>
                <fullName>Fortune Rodgriguez</fullName>
            </value>
            <value>
                <fullName>Eric Borsvold</fullName>
            </value>
            <value>
                <fullName>Elizabeth Cortez</fullName>
            </value>
            <value>
                <fullName>James Whipkey</fullName>
            </value>
            <value>
                <fullName>Johnny La</fullName>
            </value>
            <value>
                <fullName>Lauren Zehnder</fullName>
            </value>
            <value>
                <fullName>Mike McVeigh</fullName>
            </value>
            <value>
                <fullName>SMART Administrator</fullName>
            </value>
            <value>
                <fullName>Anthony Tenner</fullName>
                <isActive>false</isActive>
                <label>Anthony Tenner</label>
            </value>
            <value>
                <fullName>Chas Scott</fullName>
                <isActive>false</isActive>
                <label>Chas Scott</label>
            </value>
            <value>
                <fullName>Daniel Sotoamaya</fullName>
                <isActive>false</isActive>
                <label>Daniel Sotoamaya</label>
            </value>
            <value>
                <fullName>Molly Waskom</fullName>
                <isActive>false</isActive>
                <label>Molly Waskom</label>
            </value>
            <value>
                <fullName>Terri Wierlo</fullName>
                <isActive>false</isActive>
                <label>Terri Wierlo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>