force-app/main/default/objects/Account/fields/FOCUS_Contract_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Contract_Sign_Date__c</fullName>
    <label>FOCUS Contract Sign Date</label>
    <type>Date</type>
</CustomField>