force-app/main/default/objects/Account/fields/FOCUS_Data_Storage__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Data_Storage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These locations pay additional fee&apos;s for data storage</description>
    <label>FOCUS Data Storage</label>
    <type>Checkbox</type>
</CustomField>