force-app/main/default/objects/Account/fields/FOCUS_Last_Login_Report__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Last_Login_Report__c</fullName>
    <description>Date of when the last login report was sent to the dealer</description>
    <label>FOCUS Last Login Report</label>
    <type>Date</type>
</CustomField>