force-app/main/default/objects/Account/fields/Focus_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Focus_Live_Date__c</fullName>
    <label>FOCUS &quot;Live&quot; Date</label>
    <type>Date</type>
</CustomField>