force-app/main/default/objects/Account/fields/FOCUS_Locations__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Locations__c</fullName>
    <label>FOCUS Locations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>