force-app/main/default/objects/Account/fields/FOCUS_Onsite_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Onsite_Training_Date__c</fullName>
    <label>FOCUS Onsite Training Date</label>
    <type>Date</type>
</CustomField>