force-app/main/default/objects/Account/fields/FOCUS_Session_2_Complete__c.field-meta.xml
<CustomField>
    <fullName>FOCUS_Session_2_Complete__c</fullName>
    <label>FOCUS Session 2 Complete</label>
    <type>Date</type>
</CustomField>